force-app/main/default/objects/Vehicle__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The driver assigned to this vehicle.</description>
    <label>Driver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>