force-app/main/default/objects/Vehicle__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <description>Vehicle registration or license plate number.</description>
    <label>Registration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>