force-app/main/default/objects/Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>For primary (door-to-door) collection</fullName>
            </value>
            <value>
                <fullName>For secondary and bulk collection</fullName>
            </value>
            <value>
                <fullName>Specialized waste collection vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>