force-app/main/default/objects/Vehicle__c/fields/Vehicle_Used__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Used__c</fullName>
    <label>Vehicle_Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-cart</fullName>
            </value>
            <value>
                <fullName>Mini tipper</fullName>
            </value>
            <value>
                <fullName>Micro-truck</fullName>
            </value>
            <value>
                <fullName>Refuse compactor truck</fullName>
            </value>
            <value>
                <fullName>Dumper placer</fullName>
            </value>
            <value>
                <fullName>Hook loader</fullName>
            </value>
            <value>
                <fullName>Dumper trailer</fullName>
            </value>
            <value>
                <fullName>Vacuum waste truck</fullName>
            </value>
            <value>
                <fullName>Bulky waste vehicle</fullName>
            </value>
            <value>
                <fullName>Mechanized road sweeper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>